--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,13 @@
   <head>
     <meta charset="UTF-8">
     <title>kwota</title>
+    <link href="css/default.css" rel="stylesheet" />
   </head>
   <body>
-      Hello Kwota
+      <h1>Kwota</h1>
+      <button type="button">Sign up for free</button><br />
+      or <a href="#">Sign in</a><br />
+      <br />
+      <a href="#">Click here to learn more about Kwota</a>
   </body>
 </html>
